--- a/src/components/Components.css
+++ b/src/components/Components.css
@@ -30,28 +30,7 @@
 .nav-links a:hover {
     text-decoration: underline;
 }
-/* 사이드 내비바 - 마이페이지 고정 */
-.sidebar {
-    margin-top: 100px;
-    display: flex;
-    width: 28ex;
-    height: 80ex;
-    padding: 1rem;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #333;
-}
-.side-links {
-    list-style: none;
-    display: flex; /* Flexbox for alignment */
-    flex-direction: column; /* Align links vertically */
-    gap: 80px; /* Space between links */
-}
-.side-links a {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
-}
+
 /* footer 영역 - 하단고정 */
 .footer {
     display: flex;
@@ -69,7 +48,6 @@
     padding: 140px 220px 135px 218px;
     background: #3c3c40;
     z-index: 100;
-    color: white;
 }
 /* 카테고리 영역 - 상단고정 */
 /* 카테고리 취상위 태그 */
@@ -85,43 +63,43 @@
 .category-list {
     padding-left: 5%;
     display: flex;
-    width: 50%; 
+    width: 50%;
     justify-content: space-between;
     text-decoration: none;
 }
 .category-tap {
     list-style: none;
     font-size: 16pt;
-    width: 20%;
 }
-
+.category-tap:hover {
+   background-color: #333;
+   color: rgb(146, 91, 91);
+   width: 20%;
+   border-radius: 5px;
+}
+.dropdown-item {
+    display: none; /* 초기에는 드롭다운을 숨깁니다. */
+    top: 100%;
+    left: 0;
+    margin: 0;
+}
+.dropdown-item:hover {
+    display: block; 
+}
 .dropdown {
     display: none; /* 기본적으로 드롭다운 메뉴를 숨깁니다. */
     position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-top: 50px;
-    transform: translate(-50%, -50%);
+    left: 0;
+    margin: 0;
     width: 400px;
     padding: 0;
     list-style: none;
     background-color: #fff;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
-
 .category-tap:hover .dropdown {
     display: block; /* 마우스를 올리면 드롭다운을 표시합니다. */
 }
-
-.dropdown-item {
-    text-align: center;
-    color: black;
-    padding: 10px;
-    border-bottom: 1px solid #ddd;
-    background-color: #fff;
-}
-
-
 /* 카테고리의 검색창 css */
 .search {
     display: flex;
